[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_sun_nodes"
version = "0.1.6"
description = "Custom ComfyUI nodes by SunX.AI"
authors = [
  {name = "SunX AI", email = "sunx.ai@hotmail.com"}
]
readme = "README.md"
license = {text = "MIT license"}
classifiers = []
dependencies = []

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "mypy",
    "pre-commit",
    "ruff",
]

[project.urls]
bugs = "https://github.com/upseem/comfyui_sun_nodes/issues"
homepage = "https://github.com/upseem/comfyui_sun_nodes"
Repository = "https://github.com/upseem/comfyui_sun_nodes"

[tool.comfy]
PublisherId = "sunxai"
DisplayName = "ComfyUI Sun Nodes"
Icon = "https://avatars.githubusercontent.com/u/124853686"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[tool.ruff]
line-length = 140
src = ["nodes", "tools"]
target-version = "py39"

[tool.ruff.lint]
select = [
    "S102",
    "S307",
    "W293",
    "F",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
